fix: 仅在存在签名密钥时进行签名
- 修改build.gradle文件，添加条件判断，确保只有在提供签名密钥时才执行签名操作。这增强了构建过程的安全性，避免了在缺少密钥时的错误签名尝试。

--- a/build.gradle
+++ b/build.gradle
@@ -286,8 +286,12 @@ signing {
 	def signingKeyId = findProperty("signingKeyId")
     def signingKey = findProperty("signingKey")
     def signingPassword = findProperty("signingPassword")
-    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-    sign publishing.publications.mavenJava
+    
+    // 只在有签名密钥时才进行签名
+    if (signingKeyId && signingKey && signingPassword) {
+        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+        sign publishing.publications.mavenJava
+    }
 }
 
 spotless {
